force-app/src/objects/TR1__Message_Channel_Detail__c.object
<CustomObject>
    <description>Matching Message Channels to Campaign Template Mappings and Messages</description>
    <fields>
        <fullName>TR1__Campaign_Template_Mapping__c</fullName>
        <description>Campaign Template Mapping object record related to the Message Channel</description>
        <inlineHelpText>Campaign Template Mapping object record related to the Message Channel</inlineHelpText>
        <label>Campaign Template Mapping</label>
        <referenceTo>TR1__Campaign_Template_Mapping__c</referenceTo>
        <relationshipLabel>Message Channel Details</relationshipLabel>
        <relationshipName>Message_Channel_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__External_Key_Value__c</fullName>
        <description>Stores the API name of the external message channel template name.</description>
        <inlineHelpText>Stores the API name of the external message channel template name.</inlineHelpText>
        <label>External Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Language__c</fullName>
        <description>Used to define the language for the external message template.</description>
        <inlineHelpText>Used to define the language for the external message template.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TR1__Available_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Message_Channel__c</fullName>
        <description>Message Channel for which the message body is set</description>
        <inlineHelpText>Message Channel for which the message body is set</inlineHelpText>
        <label>Message Channel</label>
        <referenceTo>TR1__Message_Channel__c</referenceTo>
        <relationshipLabel>Message Channel Details</relationshipLabel>
        <relationshipName>Message_Channel_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Message__c</fullName>
        <description>Message body for the appropriate Message Channel and Campaign Template Mapping</description>
        <inlineHelpText>Message body for the appropriate Message Channel and Campaign Template Mapping</inlineHelpText>
        <label>Message body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Message Channel Detail</label>
    <nameField>
        <displayFormat>MCD-{0000}</displayFormat>
        <label>Message Channel Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Channel Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>